<resources>
    <string name="app_name">ShopTestApp</string>
    <string name="title_logging">Вход</string>
    <string name="title_main">Главная</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_cart">Корзина</string>
    <string name="title_promotions">Акции</string>
    <string name="title_profile">Профиль</string>


    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="to_log_in">Войти</string>
    <string name="disclaimer_first_text">Нажимая кнопку \"Войти\", Вы принимаете</string>
    <string name="disclaimer_second_text"><u>условия программы лояльности</u></string>
    <string name="sort_by_popularity">По популярности</string>
    <string name="sort_by_price_descending">По уменьшению цены</string>
    <string name="sort_by_price_ascending">По возрастанию цены</string>
    <string name="filters">Фильтры</string>
    <string name="show_all">Смотреть все</string>
</resources>