<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_round_home_square_24"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_outline_list_24"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_outline_shopping_bag_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_promotions"
        android:icon="@drawable/ic_sales_promotion_24"
        android:title="@string/title_promotions" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_person_outline_24"
        android:title="@string/title_profile" />

</menu>