<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_logging"
        android:name="com.andreirookie.shop_test_app.ui.logging.LoggingFragment"
        android:label="LoggingFragment" />

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.andreirookie.shop_test_app.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.andreirookie.shop_test_app.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.andreirookie.shop_test_app.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

</navigation>